[package]
name = "lpc178x7x-pac"
version = "0.2.0"
edition = "2024"
description = "Peripheral Access Crate for the NXP LPC17xx series microcontrollers"
readme = "README.md"
repository = "https://github.com/SakiiCode/lpc178x7x-pac"
license = "MIT"
keywords = ["arm", "cortex-m", "lpc", "nxp", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = ["LPC178x7x-mod.svd", "generate.sh"]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.0", optional = true }
vcell = "0.1.2"

[features]
critical-section = ["dep:critical-section"]
rt = ["cortex-m-rt/device", "critical-section", "dep:cortex-m-rt"]
